Switch JPL shenanigans to jinja2

--- a/apps/api/api-cf.yml.j2
+++ b/apps/api/api-cf.yml.j2
@@ -39,9 +39,6 @@ Parameters:
   SubnetIds:
     Type: CommaDelimitedList
 
-  JPLRoles:
-    Type: String
-
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
@@ -49,8 +46,6 @@ Conditions:
   LambdasInVpc: !Not [!Equals [!Ref SecurityGroupId, ""]]
 
   UseCustomDomainName: !Not [!Equals [!Ref DomainName, ""]]
-
-  UseJPLRoles: !Not [!Equals [!Ref JPLRoles, ""]]
 
 Outputs:
 
@@ -102,10 +97,12 @@ Resources:
       Stage: $default
 
   ApiRole:
-    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
+    Type: {{ 'Custom::JplRole' if security_environment == 'JPL' else 'AWS::IAM::Role' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -118,10 +115,12 @@ Resources:
         - !Ref ApiPolicy
 
   ApiPolicy:
-    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
+    Type: {{ 'Custom::JplPolicy' if security_environment == 'JPL' else 'AWS::IAM::ManagedPolicy' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       PolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -136,10 +135,12 @@ Resources:
       RetentionInDays: 90
 
   LambdaRole:
-    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
+    Type: {{ 'Custom::JplRole' if security_environment == 'JPL' else 'AWS::IAM::Role' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -153,10 +154,12 @@ Resources:
         - !Ref LambdaPolicy
 
   LambdaPolicy:
-    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
+    Type: {{ 'Custom::JplPolicy' if security_environment == 'JPL' else 'AWS::IAM::ManagedPolicy' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       PolicyDocument:
         Version: 2012-10-17
         Statement:
