--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -21,14 +21,9 @@ Parameters:
   PermissionsBoundaryPolicyArn:
     Type: String
 
-  JPLRoles:
-    Type: String
-
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
-
-  UseJPLRoles: !Not [!Equals [!Ref JPLRoles, ""]]
 
 Outputs:
 
@@ -101,10 +96,12 @@ Resources:
           Order: 1
 
   TaskRole:
-    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
+    Type: {{ 'Custom::JplRole' if security_environment == 'JPL' else 'AWS::IAM::Role' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -118,10 +115,12 @@ Resources:
         - !Ref TaskPolicy
 
   TaskPolicy:
-    Type: !If [UseJPLRoles, Custom::JplPolicy, AWS::IAM::ManagedPolicy]
+    Type: {{ 'Custom::JplPolicy' if security_environment == 'JPL' else 'AWS::IAM::ManagedPolicy' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplPolicy::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       PolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -133,10 +132,12 @@ Resources:
             Resource: !Sub "arn:aws:s3:::${ContentBucket}/*"
 
   BatchServiceRole:
-    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
+    Type: {{ 'Custom::JplRole' if security_environment == 'JPL' else 'AWS::IAM::Role' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -149,10 +150,12 @@ Resources:
         - arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole
 
   InstanceRole:
-    Type: !If [UseJPLRoles, Custom::JplRole, AWS::IAM::Role]
+    Type: {{ 'Custom::JplRole' if security_environment == 'JPL' else 'AWS::IAM::Role' }}
     Properties:
-      ServiceToken: !If [UseJPLRoles, !ImportValue Custom::JplRole::ServiceToken, !Ref AWS::NoValue]
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      {% if security_environment == 'JPL' %}
+      ServiceToken: !ImportValue Custom::JplRole::ServiceToken
+      Path: /account-managed/hyp3/
+      {% endif %}
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -167,6 +170,6 @@ Resources:
   InstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
-      Path: !If [UseJPLRoles, /account-managed/hyp3/, !Ref AWS::NoValue]
+      Path: {{ '/account-managed/hyp3/' if security_environment == 'JPL' else '!Ref AWS::NoValue' }}
       Roles:
         - !Ref InstanceRole
