--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -90,7 +90,7 @@ Resources:
   SchedulingPolicy:
     Type: AWS::Batch::SchedulingPolicy
 
-  JobQueue:
+  BatchJobQueue:
     Type: AWS::Batch::JobQueue
     Properties:
       Priority: 1
