--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -31,7 +31,7 @@ Outputs:
     Value: !Ref ComputeEnvironment
 
   JobQueueArn:
-    Value: !Ref JobQueue
+    Value: !Ref BatchJobQueue
 
   TaskRoleArn:
     Value: !GetAtt TaskRole.Arn
