--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -89,6 +89,10 @@ Resources:
 
   SchedulingPolicy:
     Type: AWS::Batch::SchedulingPolicy
+    Properties:
+      FairsharePolicy:
+        ShareDistribution:
+          - ShareIdentifier: default
 
   BatchJobQueue:
     Type: AWS::Batch::JobQueue
