--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -52,7 +52,7 @@ Resources:
     Properties:
       LaunchTemplateData:
         MetadataOptions:
-            HttpTokens: 'required'
+          HttpTokens: required
         UserData:
           Fn::Base64: |-
             Content-Type: multipart/mixed; boundary="==BOUNDARY=="
