--- a/apps/step-function.json.j2
+++ b/apps/step-function.json.j2
@@ -1,6 +1,14 @@
 {
-  "StartAt": "JOB_RUNNING",
+  "StartAt": "SET_DEFAULT_RESULTS",
   "States": {
+    "SET_DEFAULT_RESULTS": {
+      "Type": "Pass",
+      "Result": {
+        "processing_time_in_seconds": 0
+      },
+      "ResultPath": "$.results",
+      "Next": "JOB_RUNNING"
+    },
     "JOB_RUNNING": {
       "Type": "Task",
       "Resource": "${UpdateDBLambdaArn}",
