--- a/apps/main-cf.yml.j2
+++ b/apps/main-cf.yml.j2
@@ -245,7 +245,7 @@ Resources:
             AllowedOrigins:
               - "*.asf.alaska.edu"
 
-  {% if security_environment != 'EDC' %}
+  {% if security_environment in ('ASF', 'JPL-public') %}
   BucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
