--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -21,6 +21,9 @@ Parameters:
   PermissionsBoundaryPolicyArn:
     Type: String
 
+  InstanceTypes:
+    Type: CommaDelimitedList
+
 Conditions:
 
   UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
@@ -74,10 +77,7 @@ Resources:
         AllocationStrategy: SPOT_CAPACITY_OPTIMIZED
         MinvCpus: 0
         MaxvCpus: !Ref MaxvCpus
-        InstanceTypes:
-          {% for instance_type in instance_types %}
-          - {{ instance_type }}
-          {% endfor %}
+        InstanceTypes: !Ref InstanceTypes
         ImageId: !Ref AmiId
         Subnets: !Ref SubnetIds
         InstanceRole: !Ref InstanceProfile
