use jinja templating instead of cloudformation conditions for EDC-specific parameters

--- a/apps/compute-cf.yml.j2
+++ b/apps/compute-cf.yml.j2
@@ -18,15 +18,13 @@ Parameters:
   ContentBucket:
     Type: String
 
-  PermissionsBoundaryPolicyArn:
-    Type: String
-
   InstanceTypes:
     Type: CommaDelimitedList
 
-Conditions:
-
-  UsePermissionsBoundary: !Not [!Equals [!Ref PermissionsBoundaryPolicyArn, ""]]
+  {% if security_environment == 'EDC' %}
+  PermissionsBoundaryPolicyArn:
+    Type: String
+  {% endif %}
 
 Outputs:
 
@@ -115,7 +113,9 @@ Resources:
           Principal:
             Service: ecs-tasks.amazonaws.com
           Effect: Allow
-      PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
+      {% if security_environment == 'EDC' %}
+      PermissionsBoundary: !Ref PermissionsBoundaryPolicyArn
+      {% endif %}
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
         - !Ref TaskPolicy
@@ -151,7 +151,9 @@ Resources:
           Principal:
             Service: batch.amazonaws.com
           Effect: Allow
-      PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
+      {% if security_environment == 'EDC' %}
+      PermissionsBoundary: !Ref PermissionsBoundaryPolicyArn
+      {% endif %}
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole
 
@@ -169,7 +171,9 @@ Resources:
           Principal:
             Service: ec2.amazonaws.com
           Effect: Allow
-      PermissionsBoundary: !If [UsePermissionsBoundary, !Ref PermissionsBoundaryPolicyArn, !Ref AWS::NoValue]
+      {% if security_environment == 'EDC' %}
+      PermissionsBoundary: !Ref PermissionsBoundaryPolicyArn
+      {% endif %}
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
 
